app/assets/stylesheets/print.css.sass
@import 'mixins'


@media print
  @page
    // These sadly seem to be mostly ignored
    margin-top: 2cm !important
    margin-bottom: 2cm !important

  html
    font-size: 9px

  body
    line-height: 22px

  body *
    visibility: hidden
    line-height: 22px

  h1
    margin-bottom: $baseline * 2 !important

  .printable, .printable *
    visibility: visible
    overflow: visible
    float: none
    page-break-after: avoid
    .well, .ingredients-well
      border: 1px solid darkgray
    .span6
      width: 600px

  .printable
    position: relative !important
    left: 0
    top: 0
    
  .printonly
    visibility: visible
    display: block

  .printable-column
    width: 50%
    margin-left: 25%

  .noprint, .nell-popup, .nell-embed, .navbar, .aside
    display: none !important

  .video-container
    padding-top: 50px
    padding-bottom: 0px
    height: auto

  .edit-pair-edit
    display: none !important

  a[href]:after
    content: ""

  .tab-content
    .tab-pane
      display: block

  .standard-item, .medium-item, .wide-item
    width: 100% !important
    page-break-after: auto

  .half-medium-item, .quarter-medium-item, .aside
    width: 100% !important
    page-break-after: auto
    margin-left: 0 !important
    @include flex(1 0 500px)

  .aside, .aside-separate
    float: none !important
    border: 1px solid gray !important

  .assembly-activity
    .ordered-steps-new
      .ordered-step-item
        margin-bottom: $baseline !important

  .step-number
    font-size: 2.0312rem /* 20.312px / 14px */
    line-height: 2.2rem /* 22px / 14px */
    @include primary-font
    margin-left: 0
    margin-right: 0
    text-align: left
    display: inline
    div
      &:after
        content: ". "

  .step-number-container
    margin-left: 0
    margin-right: 5px
    display: inline
    padding-top: 0
    margin-bottom: 0
    width: auto
    float: left
    position: relative

  [ng-model="step.title"]
    display: inline
    text-align: left
    margin-left: 0
    margin-right: 0

  .show-mode
    .ingredients-menu-button
      display: none
    .ingredients
      .show-group:not(:empty)
        .quantity-group, .unit
          background: white !important

  // Class Print Styles

  body.fs-course
    overflow: auto
    height: initial

  .course-wrapper
    height: inherit
    float: none
    width: 80%

  .course-assembly-container
    position: relative
    height: inherit

  .course-content-wrapper
    position: relative
    height: inherit
    padding-left: 0px
    padding-right: 0px
    padding-top: 0px
    padding-bottom: 0px

